--- a/app/index.html
+++ b/app/index.html
@@ -1,67 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CAP PlantUML</title> 
 
-        <script>
-            window["sap-ushell-config"] = {
-                defaultRenderer: "fiori2",
-                applications: {
-                    "CAP-display": {
-                        title: "CAP Services",
-                        description: "Embedded",
-                        applicationType: "URL",
-                        url: "/services",
-                        navigationMode: "embedded" 
-                    },
-                    "CAP-open": {
-                        title: "CAP Services",
-                        description: "New Window",
-                        applicationType: "URL",
-                        url: "/services"
-                    },
-                    "PlantUMLTest-display": {
-                        title: "Test JSON",
-                        description: "PlantUML JSON data",
-                        applicationType: "URL",
-                        url: "/plantuml/renderTest()",
-                        navigationMode: "embedded" 
-                    },
-                    "PlantUMLNorthwind-display": {
-                        title: "Northwind JSON",
-                        description: "External Service Consumption",
-                        applicationType: "URL",
-                        url: "/plantuml/renderNorthwindOrder(OrderID=10248)",
-                        navigationMode: "embedded"
-                    },
-                    "BookstoreUML-display": {
-                        title: "Bookstore Schema",
-                        description: "db/schema.cds",
-                        applicationType: "URL",
-                        url: "/plantuml/renderBookshopSchema()",
-                        navigationMode: "embedded" 
-                    },
-                }
-            }; 
-        </script>
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>CAP PlantUML Demos</title>
 
-        <script src="https://ui5.sap.com/test-resources/sap/ushell/bootstrap/sandbox.js"></script>
-        <script
-            src="https://ui5.sap.com/resources/sap-ui-core.js"
-            data-sap-ui-libs="sap.m, sap.ushell, sap.fe.templates"
-            data-sap-ui-compatVersion="edge"
-            data-sap-ui-theme="sap_fiori_3"
-            data-sap-ui-frameOptions="allow"
-            data-sap-ui-bindingSyntax="complex"
-        ></script>
-        <script>
-            sap.ui.getCore().attachInit(function() {
-                sap.ushell.Container.createRenderer().placeAt('content');
-            });
-        </script>
-    </head>
-    <body class="sapUiBody" id="content"></body>
+    <style>
+        #shell-header-icon {
+            content: url("./img/brand-logo-dark.svg");
+        }
+    </style>
+</head>
+
+<body class="sapUiBody sapUShellFullHeight">
+    <div id="content"></div>
+    <script src="./index.js"></script>
+</body>
+
 </html>
